@@ -1,3 +1,7 @@
+2003-11-16	blytkerhan
+	* queue.c: new file
+	* queue.h: ditto
+
 2003-10-28	blytkerchan
 	* stack.c: rewrite
 	* stack.h: ditto
